current score displays in html

--- a/04-jquery/01-Activities/crystalsCollector/assets/css/style.css
+++ b/04-jquery/01-Activities/crystalsCollector/assets/css/style.css
@@ -33,6 +33,7 @@ body {
   height: 100px;
   padding: 4px;
   font-size: 3vw;
+  text-align: center;
   color: purple;
   background-color: mediumseagreen;
 }
@@ -41,6 +42,8 @@ body {
   width: 210px;
   height: 100px;
   padding: 4px;
+  font-size: 3vw;
+  text-align: center;
   color: ghostwhite;
   background-color: darkcyan;
 }
