--- a/05-timers/01-Activities/17-FloatsBoxModel/style.css
+++ b/05-timers/01-Activities/17-FloatsBoxModel/style.css
@@ -22,7 +22,10 @@ body {
     float: right;
     width: 25%;
     padding: 2%;
+    height: 653px;
+
     box-sizing: border-box;
+    overflow: auto;
 
     background-color: #b20;
   }
