--- a/05-timers/01-Activities/20-jQueryToDo/styles.css
+++ b/05-timers/01-Activities/20-jQueryToDo/styles.css
@@ -3,3 +3,14 @@ body {
     color: yellow;
     text-align: center;
 }
+
+h1 {
+    font-size: 42px;
+  }
+
+  input {
+    width:50%;
+    margin:10% 2%;
+    height:32px;
+    font-size: 24px;
+  }
