styles for task div

--- a/05-timers/01-Activities/20-jQueryToDo/styles.css
+++ b/05-timers/01-Activities/20-jQueryToDo/styles.css
@@ -25,3 +25,18 @@ h1 {
     color:black;
   }
 
+  #tasks div {
+    border:1px solid grey;
+    margin: 2%;
+    font-size: 32px;
+    padding:5%;
+    box-sizing: border-box;
+  }
+  #delete {
+    cursor:pointer;
+    float:right;
+    color:red;
+    font-weight: bold;
+  }
+
+
