--- a/05-timers/01-Activities/21-MediaQueries/style.css
+++ b/05-timers/01-Activities/21-MediaQueries/style.css
@@ -60,4 +60,14 @@
   }
   
   /********** ADD YOUR MEDIA QUERIES BELOW THIS LINE *************/
-  
+@media screen and (max-width: 1024px) {
+    nav {
+        background-color: green;
+    }
+} 
+
+@media screen and (max-width: 768px) {
+    nav {
+        background-color: orange;
+    }
+}
