added media query for h1 and #menu

--- a/05-timers/01-Activities/21-MediaQueries/style.css
+++ b/05-timers/01-Activities/21-MediaQueries/style.css
@@ -64,6 +64,15 @@
     nav {
         background-color: green;
     }
+    h1 {
+        display:  block;
+        text-align: center;
+    }
+
+    #menu{
+        display: block;
+        float: none;
+    }
 } 
 
 @media screen and (max-width: 768px) {
