added media query for nav

--- a/05-timers/01-Activities/21-MediaQueries/style.css
+++ b/05-timers/01-Activities/21-MediaQueries/style.css
@@ -72,6 +72,11 @@
     #menu{
         display: block;
         float: none;
+        background-color:  maroon;
+    }
+    nav {
+        height: auto;
+        padding: 0;
     }
 } 
 
