--- a/05-timers/01-Activities/21-MediaQueries/style.css
+++ b/05-timers/01-Activities/21-MediaQueries/style.css
@@ -85,6 +85,14 @@
         padding: 10px;
         margin: 0 5%;
     }
+    #pagewrapper {
+        width: 100%;
+    }
+    #left, #center, #right {
+        display: block;
+        width: 90%;
+        margin: 2% auto;
+    }
 } 
 
 @media screen and (max-width: 768px) {
