--- a/05-timers/01-Activities/21-MediaQueries/style.css
+++ b/05-timers/01-Activities/21-MediaQueries/style.css
@@ -99,4 +99,9 @@
     nav {
         background-color: orange;
     }
+    #left, #center, #right {
+        height: 200px;
+        overflow: auto;
+        margin: 5% auto;
+    }
 }
