--- a/05-timers/01-Activities/21-MediaQueries/style.css
+++ b/05-timers/01-Activities/21-MediaQueries/style.css
@@ -104,4 +104,7 @@
         overflow: auto;
         margin: 5% auto;
     }
+    #image-div {
+        background-image: url("http://www.stevensegallery.com/768/200");
+      }
 }
